- migrate from groovy to kotlin dsl - add version catalogs to be used to manage dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -220,6 +220,9 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+# vscode
+.vscode/*
+
 ### AndroidStudio Patch ###
 
 !/gradle/wrapper/gradle-wrapper.jar
